--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <title>Página Principal - TP1</title>
+</head>
+<body>
+  <h1>Trabajo Práctico N°1 - Computación Gráfica y Programación Web</h1>
+  <h2>Facultad de Ciencias y Tecnologías (FACyT)</h2>
+  <h3>Carrera: Ingeniería Informática</h3>
+  <p>Alumno/a: __________________________</p>
+  <p>Profesor: Dr. Benito Almada</p>
+  <hr>
+  <h2>Bienvenido</h2>
+  <p>Esta es la página principal del trabajo práctico N°1.</p>
+  <p>Desde aquí podés acceder a las siguientes secciones:</p>
+  <ul>
+    <li><a href="pagina1.html">Página 1 - Tabla de productos</a></li>
+    <li><a href="pagina2.html">Página 2 - Galería de imágenes</a></li>
+  </ul>
+  <hr>
+  <p>© 2025 - Facultad de Ciencias y Tecnologías</p>
+</body>
+</html>
 
