--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1>Trabajo Práctico N°1 - Computación Gráfica y Programación Web</h1>
   <h2>Facultad de Ciencias y Tecnologías (FACyT)</h2>
   <h3>Carrera: Ingeniería Informática</h3>
-  <p>Alumno/a: __________________________</p>
+  <p>Alumno/a: Bianca Galeano </p>
   <p>Profesor: Dr. Benito Almada</p>
   <hr>
   <h2>Bienvenido</h2>
