--- a/pagina1.html
+++ b/pagina1.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <title>Página 1 - Tabla de productos</title>
+</head>
+<body>
+  <h1>Tabla de Productos</h1>
+  <p>Listado de productos con su descripción y precio.</p>
+  <table border="1" cellpadding="5" cellspacing="0">
+    <tr>
+      <th>Producto</th>
+      <th>Descripción</th>
+      <th>Precio (Gs.)</th>
+    </tr>
+    <tr>
+      <td>Cafetera eléctrica compacta</td>
+      <td>Cafetera práctica, ideal para uso doméstico.</td>
+      <td>450.000</td>
+    </tr>
+    <tr>
+      <td>Auriculares inalámbricos</td>
+      <td>Con excelente sonido y conexión Bluetooth.</td>
+      <td>320.000</td>
+    </tr>
+    <tr>
+      <td>Mochila urbana resistente</td>
+      <td>Perfecta para el día a día y resistente al agua.</td>
+      <td>250.000</td>
+    </tr>
+  </table>
+  <hr>
+  <p><a href="index.html">Volver a la página principal</a></p>
+</body>
+</html>
 
