--- a/pagina2.html
+++ b/pagina2.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <title>Página 2 - Galería de imágenes</title>
+</head>
+<body>
+  <h1>Galería de Productos</h1>
+  <p>Imágenes descriptivas de los productos presentados en la página anterior.</p>
+  <h2>Cafetera eléctrica compacta</h2>
+  <img src="https://m.media-amazon.com/images/I/61gcdyi7vjL.jpg" alt="Cafetera eléctrica compacta" width="300">
+  <h2>Auriculares inalámbricos</h2>
+  <img src="https://m.media-amazon.com/images/I/71sBygGN7TL.jpg" alt="Auriculares inalámbricos" width="300">
+  <h2>Mochila urbana resistente</h2>
+  <img src="https://m.media-amazon.com/images/I/71MjHbDWV4L._AC_UY1000_.jpg" alt="Mochila urbana resistente" width="300">
+  <hr>
+  <p><a href="index.html">Volver a la página principal</a></p>
+</body>
+</html>
 
