--- a/pagina1.html
+++ b/pagina1.html
@@ -28,9 +28,25 @@
       <td>Perfecta para el día a día y resistente al agua.</td>
       <td>250.000</td>
     </tr>
+    <tr>
+      <td>Smartwatch deportivo</td>
+      <td>Reloj inteligente con monitor de ritmo cardíaco y pasos.</td>
+      <td>400.000</td>
+    </tr>
+    <tr>
+      <td>Notebook 14”</td>
+      <td>Computadora portátil liviana, ideal para estudiantes y oficina.</td>
+      <td>3.200.000</td>
+    </tr>
+    <tr>
+      <td>Impresora multifunción</td>
+      <td>Equipo que imprime, escanea y copia documentos.</td>
+      <td>980.000</td>
+    </tr>
   </table>
   <hr>
   <p><a href="index.html">Volver a la página principal</a></p>
 </body>
 </html>
+
 
