--- a/pagina2.html
+++ b/pagina2.html
@@ -13,8 +13,15 @@
   <img src="https://m.media-amazon.com/images/I/71sBygGN7TL.jpg" alt="Auriculares inalámbricos" width="100">
   <h2>Mochila urbana resistente</h2>
   <img src="https://m.media-amazon.com/images/I/71MjHbDWV4L._AC_UY1000_.jpg" alt="Mochila urbana resistente" width="100">
+  <h2>Smartwatch deportivo</h2>
+  <img src="https://m.media-amazon.com/images/I/61tuQdl2yLL._AC_UF894,1000_QL80_.jpg" alt="Smartwatch deportivo" width="100">
+  <h2>Notebook 14”</h2>
+  <img src="https://m.media-amazon.com/images/I/71vM4U5lOaL._AC_UY1000_.jpg" alt="Notebook 14 pulgadas" width="100">
+  <h2>Impresora multifunción</h2>
+  <img src="https://m.media-amazon.com/images/I/61LQQzFQc-L._AC_UY1000_.jpg" alt="Impresora multifunción" width="100">
   <hr>
   <p><a href="index.html">Volver a la página principal</a></p>
 </body>
 </html>
+
 
