--- a/pagina2.html
+++ b/pagina2.html
@@ -8,17 +8,17 @@
   <h1>Galería de Productos</h1>
   <p>Imágenes descriptivas de los productos presentados en la página anterior.</p>
   <h2>Cafetera eléctrica compacta</h2>
-  <img src="https://m.media-amazon.com/images/I/61gcdyi7vjL.jpg" alt="Cafetera eléctrica compacta" width="100">
+  <img src="https://m.media-amazon.com/images/I/61gcdyi7vjL.jpg" alt="Cafetera eléctrica compacta" width="300">
   <h2>Auriculares inalámbricos</h2>
-  <img src="https://m.media-amazon.com/images/I/71sBygGN7TL.jpg" alt="Auriculares inalámbricos" width="100">
+  <img src="https://m.media-amazon.com/images/I/71sBygGN7TL.jpg" alt="Auriculares inalámbricos" width="300">
   <h2>Mochila urbana resistente</h2>
-  <img src="https://m.media-amazon.com/images/I/71MjHbDWV4L._AC_UY1000_.jpg" alt="Mochila urbana resistente" width="100">
+  <img src="https://m.media-amazon.com/images/I/71MjHbDWV4L._AC_UY1000_.jpg" alt="Mochila urbana resistente" width="300">
   <h2>Smartwatch deportivo</h2>
-  <img src="https://m.media-amazon.com/images/I/61tuQdl2yLL._AC_UF894,1000_QL80_.jpg" alt="Smartwatch deportivo" width="100">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Smartwatch_Black_Wrist.jpg" alt="Smartwatch deportivo" width="300">
   <h2>Notebook 14”</h2>
-  <img src="https://m.media-amazon.com/images/I/71vM4U5lOaL._AC_UY1000_.jpg" alt="Notebook 14 pulgadas" width="100">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/5/50/HP_14_Notebook_14_dq0002dx.jpg" alt="Notebook 14 pulgadas" width="300">
   <h2>Impresora multifunción</h2>
-  <img src="https://m.media-amazon.com/images/I/61LQQzFQc-L._AC_UY1000_.jpg" alt="Impresora multifunción" width="100">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/1/1f/HP_OfficeJet_Pro_6970.jpg" alt="Impresora multifunción" width="300">
   <hr>
   <p><a href="index.html">Volver a la página principal</a></p>
 </body>
