--- a/pagina2.html
+++ b/pagina2.html
@@ -14,14 +14,15 @@
   <h2>Mochila urbana resistente</h2>
   <img src="https://m.media-amazon.com/images/I/71MjHbDWV4L._AC_UY1000_.jpg" alt="Mochila urbana resistente" width="300">
   <h2>Smartwatch deportivo</h2>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Smartwatch_Black_Wrist.jpg" alt="Smartwatch deportivo" width="300">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/d/d1/Fossil_Wrist_PDA_on_wrist.JPG" alt="Smartwatch deportivo" width="300">
   <h2>Notebook 14”</h2>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/5/50/HP_14_Notebook_14_dq0002dx.jpg" alt="Notebook 14 pulgadas" width="300">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/1/1f/HP_14.jpg" alt="Notebook 14 pulgadas" width="300">
   <h2>Impresora multifunción</h2>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/1/1f/HP_OfficeJet_Pro_6970.jpg" alt="Impresora multifunción" width="300">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/a/a3/HP_Deskjet_All_in_One_Printer.jpg" alt="Impresora multifunción" width="300">
   <hr>
   <p><a href="index.html">Volver a la página principal</a></p>
 </body>
 </html>
+
 
 
