--- a/pagina2.html
+++ b/pagina2.html
@@ -14,7 +14,7 @@
   <h2>Mochila urbana resistente</h2>
   <img src="https://m.media-amazon.com/images/I/71MjHbDWV4L._AC_UY1000_.jpg" alt="Mochila urbana resistente" width="300">
   <h2>Smartwatch deportivo</h2>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/d/d1/Fossil_Wrist_PDA_on_wrist.JPG" alt="Smartwatch deportivo" width="300">
+  <img src="https://www.amazon.com.mx/Smartwatch-Mujer-Reloj-Inteligente-Impermeable/dp/B0CHMS775S" alt="Smartwatch deportivo" width="300">
   <h2>Notebook 14”</h2>
   <img src="https://upload.wikimedia.org/wikipedia/commons/1/1f/HP_14.jpg" alt="Notebook 14 pulgadas" width="300">
   <h2>Impresora multifunción</h2>
