--- a/pagina2.html
+++ b/pagina2.html
@@ -14,7 +14,7 @@
   <h2>Mochila urbana resistente</h2>
   <img src="https://m.media-amazon.com/images/I/71MjHbDWV4L._AC_UY1000_.jpg" alt="Mochila urbana resistente" width="300">
   <h2>Smartwatch deportivo</h2>
-  <img src="https://www.amazon.com.mx/Smartwatch-Mujer-Reloj-Inteligente-Impermeable/dp/B0CHMS775S" alt="Smartwatch deportivo" width="300">
+  <img src="https://i5.walmartimages.com/asr/3c0915f0-f9e1-43c9-a8c4-f3537df90b77.e15c73b4404637d54053f409c60d82af.jpeg?odnHeight=612&odnWidth=612&odnBg=FFFFFF" width="300">
   <h2>Notebook 14”</h2>
   <img src="https://upload.wikimedia.org/wikipedia/commons/1/1f/HP_14.jpg" alt="Notebook 14 pulgadas" width="300">
   <h2>Impresora multifunción</h2>
