--- a/pagina2.html
+++ b/pagina2.html
@@ -8,17 +8,17 @@
   <h1>Galería de Productos</h1>
   <p>Imágenes descriptivas de los productos presentados en la página anterior.</p>
   <h2>Cafetera eléctrica compacta</h2>
-  <img src="https://m.media-amazon.com/images/I/61gcdyi7vjL.jpg" alt="Cafetera eléctrica compacta" width="300">
+  <img src="https://m.media-amazon.com/images/I/61gcdyi7vjL.jpg" alt="Cafetera eléctrica compacta" width="100">
   <h2>Auriculares inalámbricos</h2>
-  <img src="https://m.media-amazon.com/images/I/71sBygGN7TL.jpg" alt="Auriculares inalámbricos" width="300">
+  <img src="https://m.media-amazon.com/images/I/71sBygGN7TL.jpg" alt="Auriculares inalámbricos" width="100">
   <h2>Mochila urbana resistente</h2>
-  <img src="https://m.media-amazon.com/images/I/71MjHbDWV4L._AC_UY1000_.jpg" alt="Mochila urbana resistente" width="300">
+  <img src="https://m.media-amazon.com/images/I/71MjHbDWV4L._AC_UY1000_.jpg" alt="Mochila urbana resistente" width="100">
   <h2>Smartwatch deportivo</h2>
-  <img src="https://i5.walmartimages.com/asr/3c0915f0-f9e1-43c9-a8c4-f3537df90b77.e15c73b4404637d54053f409c60d82af.jpeg?odnHeight=612&odnWidth=612&odnBg=FFFFFF" width="300">
+  <img src="https://i5.walmartimages.com/asr/3c0915f0-f9e1-43c9-a8c4-f3537df90b77.e15c73b4404637d54053f409c60d82af.jpeg?odnHeight=612&odnWidth=612&odnBg=FFFFFF" width="100">
   <h2>Notebook 14”</h2>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/1/1f/HP_14.jpg" alt="Notebook 14 pulgadas" width="300">
+  <img src="https://cdn.pacifiko.com/image/cache/catalog/p/YzAzMmQyN2-1000x1000.png" width="100">
   <h2>Impresora multifunción</h2>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/a/a3/HP_Deskjet_All_in_One_Printer.jpg" alt="Impresora multifunción" width="300">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/a/a3/HP_Deskjet_All_in_One_Printer.jpg" alt="Impresora multifunción" width="100">
   <hr>
   <p><a href="index.html">Volver a la página principal</a></p>
 </body>
